[tool.poetry]
name = "multiplan"
version = "0.1.0"
description = ""
authors = ["Thiago da Cunha Borges <thcborges@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.0.0"
wordcloud = "^1.8.2.2"
dash-bootstrap-components = "^1.4.1"
dash = "^2.9.2"
pyarrow = "^11.0.0"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.10.4"
ipython = "^8.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
